<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/button_material_light">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/mll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="vertical" android:layout_weight="1">
                <ImageView
                    android:paddingTop="10dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/for_play_store"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:paddingTop="12dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textSize="25dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>


            <LinearLayout
                android:paddingTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="vertical"
                android:layout_below="@id/mll"
                android:gravity="bottom">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/created"
                    android:textSize="30sp"
                    android:layout_gravity="left"/>

                <TextView
                    android:id="@+id/firsttext"
                    android:paddingTop="20dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/secondtext"
                    android:paddingTop="20dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/thirdtext"
                    android:paddingTop="20dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/mylink"
                    android:paddingTop="30dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textSize="23sp"
                    android:text="@string/site"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
