<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

          <!--  <com.rey.material.widget.Spinner
                android:id="@+id/spinner"
                style="@style/Material.Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:rd_style="@style/Material.Drawable.Ripple.Wave"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:dropDownWidth="match_parent"
                app:spn_labelEnable="true"
                app:spn_label="@string/prompt"
                app:spn_labelTextSize="16sp"
                app:spn_labelTextColor="#ff616062"


                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"



                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#fdbac1b5"/>-->

            <LinearLayout
                android:id="@+id/verticle_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


          <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sessional1_regular"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    />


            <EditText android:id="@+id/sessional1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="2"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"

                android:inputType="date"
                android:maxLength="2"
                android:nextFocusForward="@+id/sessional2"


                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>
            </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sessional2_regular"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        />
            <EditText android:id="@id/sessional2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:ems="2"
                android:inputType="date"
                android:maxLength="2"
                android:nextFocusForward="@+id/sessional3"


                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>
            </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sessional3_regular"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        />
                <EditText android:id="@id/sessional3"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                android:ems="2"
                android:inputType="date"
                android:maxLength="2"
                android:nextFocusForward="@+id/practical"


                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:text="@string/max_marks"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        />


                    <RadioGroup
                        android:layout_weight="1"
                        android:id="@+id/radiotype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginTop="16dp"
                        android:nextFocusForward="@+id/fab"
                        android:layout_marginBottom="8dp">

                        <RadioButton
                            android:id="@+id/outof150"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="150"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/outof100"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:text="100" />

                    </RadioGroup>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pracv"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:text="@string/practical_regular"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        />


                    <EditText android:id="@id/practical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                        android:layout_weight="1"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:ems="2"
                android:nextFocusForward="@+id/pointertext"
            android:hint="Out of 50"
                android:inputType="date"
                android:maxLength="2"

                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

                      <!--     <EditText android:id="@id/external"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/external"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"


                    android:inputType="date"
                    android:maxLength="2"
                    android:nextFocusForward="@+id/pointertext"


                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>
-->
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ptr_regular"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        />

                    <EditText android:id="@id/pointertext"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                        android:layout_weight="1"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"

                    android:ems="2"
                    android:inputType="date"
                    android:maxLength="2"
                    android:nextFocusForward="@+id/radiotype"


                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>


</LinearLayout>



            </LinearLayout>
        </LinearLayout>

     </ScrollView>




    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:onClick="onAdd"

        android:src="@drawable/ic_done_white_24dp"
        fab:fab_type="normal"
        fab:fab_shadow="true"
        fab:fab_colorNormal="?attr/colorAccent"
        fab:fab_colorPressed="?attr/colorAccent"
        fab:fab_colorRipple="#ff868c82" />




</FrameLayout>


